  - ::getRevisionRecordByTimestamp()
  - ::getArchivedRevisionRecord()
  - ::getPreviousRevisionRecord()
  - ::getLastRevisionId()
  - ::isDeleted()
  - ::getFileStatus()
  - ::getRevisionStatus()
* Database, DatabaseInstaller, DatabaseUpdater, DBPrimaryPos, ResultWrapper and
  SQLPlatform are no longer stable to extend. It is not possible to define
  database types in an extension.
* …

=== Deprecations in 1.42 ===
* (T166010) All PHP code in MediaWiki is slowly being moved to be in a class
  namespace as appropriate, so that we can use PSR-4 auto-loading, which will
  speed up general code loading of MediaWiki. The old global namespace class
  names are being left behind as deprecated aliases.

  In this release of MediaWiki, XYZ classes now have a namespace and XYZ do
  not yet (XYZ% done, up from 63% in MediaWiki 1.41.0). The following have newly
  been moved:
  - MediaWiki\Deferred:
    - AtomicSectionUpdate
    - AutoCommitUpdate
    - CdnCacheUpdate
    - DataUpdate
    - DeferrableCallback
    - DeferrableUpdate
    - DeferredUpdates
    - DeferredUpdatesScope
    - DeferredUpdatesScopeMediaWikiStack
    - DeferredUpdatesScopeStack
    - EnqueueableDataUpdate
    - HtmlFileCacheUpdate
    - JobQueueEnqueueUpdate
    - MWCallableUpdate
    - MergeableUpdate
    - MessageCacheUpdate
    - SearchUpdate
    - SendPasswordResetEmailUpdate
    - SiteStatsUpdate
    - TransactionRoundAwareUpdate
    - TransactionRoundDefiningUpdate
    - UserEditCountInfo
    - UserEditCountUpdate
* API modules using ApiBase::requirePostedParameters() must also override
  mustBePosted() to return true.
* BlockManager::getUserBlock() was deprecated. Instead use
  BlockManager::getBlock(), which expects the caller to do ipblock-exempt
  checking.
* User::isBlocked(), ::isBlockedFromCreateAccount() and ::isBlockedFrom() now
  emit deprecation warnings. They were deprecated since 1.34, 1.37 and 1.33
  respectively.