@@ -32,11 +32,12 @@ class UserDef extends TypeDef {
 	 * One or more of the following values:
 	 * - 'name': User names are allowed.
 	 * - 'ip': IP ("anon") usernames are allowed.
+	 * - 'temp': Temporary users are allowed.
 	 * - 'cidr': IP ranges are allowed.
 	 * - 'interwiki': Interwiki usernames are allowed.
 	 * - 'id': Allow specifying user IDs, formatted like "#123".
 	 *
-	 * Default is `[ 'name', 'ip', 'cidr', 'interwiki' ]`.
+	 * Default is `[ 'name', 'ip', 'temp', 'cidr', 'interwiki' ]`.
 	 *
 	 * Avoid combining 'id' with PARAM_ISMULTI, as it may result in excessive
 	 * DB lookups. If you do combine them, consider setting low values for
@@ -96,12 +97,12 @@ class UserDef extends TypeDef {
 	public function normalizeSettings( array $settings ) {
 		if ( isset( $settings[self::PARAM_ALLOWED_USER_TYPES] ) ) {
 			$settings[self::PARAM_ALLOWED_USER_TYPES] = array_values( array_intersect(
-				[ 'name', 'ip', 'cidr', 'interwiki', 'id' ],
+				[ 'name', 'ip', 'temp', 'cidr', 'interwiki', 'id' ],
 				$settings[self::PARAM_ALLOWED_USER_TYPES]
 			) );
 		}
 		if ( empty( $settings[self::PARAM_ALLOWED_USER_TYPES] ) ) {
-			$settings[self::PARAM_ALLOWED_USER_TYPES] = [ 'name', 'ip', 'cidr', 'interwiki' ];
+			$settings[self::PARAM_ALLOWED_USER_TYPES] = [ 'name', 'ip', 'temp', 'cidr', 'interwiki' ];
 		}
 
 		return parent::normalizeSettings( $settings );
@@ -129,7 +130,7 @@ class UserDef extends TypeDef {
 			} else {
 				$bad = array_diff(
 					$settings[self::PARAM_ALLOWED_USER_TYPES],
-					[ 'name', 'ip', 'cidr', 'interwiki', 'id' ]
+					[ 'name', 'ip', 'temp', 'cidr', 'interwiki', 'id' ]
 				);
 				if ( $bad ) {
 					$ret['issues'][self::PARAM_ALLOWED_USER_TYPES] =
@@ -197,6 +198,12 @@ class UserDef extends TypeDef {
 			// to avoid converting the first character of the interwiki prefix to uppercase
 			$user = $name !== false ? new UserIdentityValue( 0, $value, UserIdentityValue::LOCAL ) : null;
 			return [ 'interwiki', $user ];
+		}
+
+		// A temp user?
+		if ( $this->userNameUtils->isTemp( $value ) ) {
+			$userIdentity = $this->userIdentityLookup->getUserIdentityByName( $value );
+			return [ 'temp', $userIdentity ];
 		}
 
 		// A valid user name?
@@ -290,7 +297,8 @@ class UserDef extends TypeDef {
 		foreach ( $settings[self::PARAM_ALLOWED_USER_TYPES] as $st ) {
 			// Messages: paramvalidator-help-type-user-subtype-name,
 			// paramvalidator-help-type-user-subtype-ip, paramvalidator-help-type-user-subtype-cidr,
-			// paramvalidator-help-type-user-subtype-interwiki, paramvalidator-help-type-user-subtype-id
+			// paramvalidator-help-type-user-subtype-interwiki, paramvalidator-help-type-user-subtype-id,
+			// paramvalidator-help-type-user-subtype-temp
 			$subtypes[] = MessageValue::new( "paramvalidator-help-type-user-subtype-$st" );
 		}
 		$info[ParamValidator::PARAM_TYPE] = MessageValue::new( 'paramvalidator-help-type-user' )
