@@ -4803,6 +4803,7 @@
 	"paramvalidator-baduser": "Error in API parameter validation. Parameters:\n* $1 - Parameter name.\n* $2 - Parameter value.",
 	"paramvalidator-help-type-user": "Used to indicate that a parameter is a user or list of users. Parameters:\n* $1 - 1 if the parameter takes one value, 2 if the parameter takes any number of values\n* $2 - List of allowed ways to specify the user, as an 'and'-style list.\n* $3 - Number of items in $2.\n\nSee also:\n* {{msg-mw|paramvalidator-help-type-user-subtype-name}}\n* {{msg-mw|paramvalidator-help-type-user-subtype-ip}}\n* {{msg-mw|paramvalidator-help-type-user-subtype-cidr}}\n* {{msg-mw|paramvalidator-help-type-user-subtype-interwiki}}\n* {{msg-mw|paramvalidator-help-type-user-subtype-id}}",
 	"paramvalidator-help-type-user-subtype-name": "Used with {{msg-mw|paramvalidator-help-type-user}} to indicate that users may be specified by name.",
+	"paramvalidator-help-type-user-subtype-temp": "Used with {{msg-mw|paramvalidator-help-type-user}} to indicate that users are temporary accounts",
 	"paramvalidator-help-type-user-subtype-ip": "Used with {{msg-mw|paramvalidator-help-type-user}} to indicate that IP (anonymous) users may be specified by IP.",
 	"paramvalidator-help-type-user-subtype-cidr": "Used with {{msg-mw|paramvalidator-help-type-user}} to indicate that IP (anonymous) users may be specified by a CIDR range.",
 	"paramvalidator-help-type-user-subtype-interwiki": "Used with {{msg-mw|paramvalidator-help-type-user}} to indicate that \"interwiki\" usernames may be specified. Interwiki usernames in MediaWiki generally appear due to imports.",
