@@ -20,13 +20,15 @@ class UserDefTest extends TypeDefUnitTestCase {
 
 	protected function getInstance( SimpleCallbacks $callbacks, array $options ) {
 		// The UserIdentityLookup that we have knows about 5 users, with ids
-		// 1 through 5 and names starting with the first 5 letters of the alphabet:
+		// 1 through 5 and names starting with the first 5 letters of the alphabet
+		// And 1 temporary account with a larger id separate from this pattern:
 		$namesToIds = [
 			'Adam Smith' => 1,
 			'Becca' => 2,
 			'Charlie' => 3,
 			'Danny' => 4,
 			'Emma' => 5,
+			'*Unregistered 1' => 100,
 		];
 		$userIdentityLookup = $this->createMock( UserIdentityLookup::class );
 		$userIdentityLookup->method( 'getUserIdentityByName' )->willReturnCallback(
@@ -78,6 +80,7 @@ class UserDefTest extends TypeDefUnitTestCase {
 			'Basic' => [ 'name', 'Adam Smith', 'Adam Smith' ],
 			'Normalized' => [ 'name', 'adam_Smith', 'Adam Smith' ],
 			'External' => [ 'interwiki', 'm>some_user', 'm>some_user' ],
+			'Temporary user' => [ 'temp', '*Unregistered 1', '*Unregistered 1' ],
 			'IPv4' => [ 'ip', '192.168.0.1', '192.168.0.1' ],
 			'IPv4, normalized' => [ 'ip', '192.168.000.001', '192.168.0.1' ],
 			'IPv6' => [ 'ip', '2001:DB8:0:0:0:0:0:0', '2001:DB8:0:0:0:0:0:0' ],
@@ -115,7 +118,7 @@ class UserDefTest extends TypeDefUnitTestCase {
 				[ UserDef::PARAM_ALLOWED_USER_TYPES => [ $type ] ],
 			];
 
-			$types = array_diff( [ 'name', 'ip', 'cidr', 'interwiki' ], [ $type ] );
+			$types = array_diff( [ 'name', 'ip', 'temp', 'cidr', 'interwiki' ], [ $type ] );
 			yield "$key, without '$type' allowed" => [
 				$input,
 				$ex,
@@ -129,6 +132,9 @@ class UserDefTest extends TypeDefUnitTestCase {
 				// UserIdentityValue object since the name and id are both
 				// known (id is 0 for all)
 				$obj = UserIdentityValue::newAnonymous( $expect );
+			} elseif ( $type === 'temp' ) {
+				// The 1 temp user has an id of 100
+				$obj = new UserIdentityValue( 100, $expect );
 			} else {
 				// Creating from name, we are only testing for "Adam Smith"
 				// so the id will be 1
@@ -185,7 +191,7 @@ class UserDefTest extends TypeDefUnitTestCase {
 				[ 'param-foo' => 'bar' ],
 				[
 					'param-foo' => 'bar',
-					UserDef::PARAM_ALLOWED_USER_TYPES => [ 'name', 'ip', 'cidr', 'interwiki' ],
+					UserDef::PARAM_ALLOWED_USER_TYPES => [ 'name', 'ip', 'temp', 'cidr', 'interwiki' ],
 				],
 			],
 			'Types not overridden' => [
@@ -360,10 +366,10 @@ class UserDefTest extends TypeDefUnitTestCase {
 			'Basic test' => [
 				[],
 				[
-					'subtypes' => [ 'name', 'ip', 'cidr', 'interwiki' ],
+					'subtypes' => [ 'name', 'ip', 'temp', 'cidr', 'interwiki' ],
 				],
 				[
-					ParamValidator::PARAM_TYPE => '<message key="paramvalidator-help-type-user"><text>1</text><list listType="text"><text><message key="paramvalidator-help-type-user-subtype-name"></message></text><text><message key="paramvalidator-help-type-user-subtype-ip"></message></text><text><message key="paramvalidator-help-type-user-subtype-cidr"></message></text><text><message key="paramvalidator-help-type-user-subtype-interwiki"></message></text></list><num>4</num></message>',
+					ParamValidator::PARAM_TYPE => '<message key="paramvalidator-help-type-user"><text>1</text><list listType="text"><text><message key="paramvalidator-help-type-user-subtype-name"></message></text><text><message key="paramvalidator-help-type-user-subtype-ip"></message></text><text><message key="paramvalidator-help-type-user-subtype-temp"></message></text><text><message key="paramvalidator-help-type-user-subtype-cidr"></message></text><text><message key="paramvalidator-help-type-user-subtype-interwiki"></message></text></list><num>5</num></message>',
 				],
 			],
 			'Specific types' => [
